--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
                 flex: 1;
                 padding: 15px;
             }
-                            /* portfolio styles */
+                        /* portfolio styles */
             #portfolio {
                 list-style-type: none;
                 padding-left: 0;
@@ -77,15 +77,15 @@
                 color: #454545;
             }
 
-            
         </style>
 
     </head>
 
     <body>
       <div id="all-contents">
-           <nav>
-            <header>Whitley's Website</header>
+          
+        <nav>
+            <header>Sheba's Glorious Website</header>
             <ul>
                 <li><a href="index.html">Home</a>
                 </li>
@@ -93,7 +93,7 @@
                 </li>
             </ul>
         </nav>
-         <main>
+        <main>
             <div class="content">
                 <h1>Portfolio</h1>
                 <ul id="portfolio">
@@ -102,7 +102,7 @@
         </main>
       </div>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
+    <script id="portfolioScript">$(document).ready(function() {$.getJSON('projects/projects.json').then(function(data) { data.projects.forEach(function(project){ $('#portfolio').append('<li><a href="projects/' + project.name + '/">' + project.title + ' : ' + project.description + '</a></li>'); }); }); });</script>
 
     </body>
 </html>
